Remove allowCredentials to fix strict CORS policy